--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!---严禁抄袭！！！Fuck you！！！--->
 <html lang="cmn-hans">
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -11,10 +10,10 @@
 </head>
 <body background="https://static.miraheze.org/zhpolandballwiki/5/51/Wiki-background.png">
     <h1 id="top">
-		<h1 class="typography-site-headline-standalone hero-headline-copy text-zoom-break-word">欢迎来到中国球工作室官网！</h1>
-		<h1 class="typography-site-headline-standalone hero-headline-copy text-zoom-break-word">请记住，工作室的生日是：10月22日！</h1>
-		<h1 class="typography-site-headline-standalone hero-headline-copy text-zoom-break-word">这是个规模超大的工作室！（快了）</h1>
-		<h1 class="typography-site-headline-standalone hero-headline-copy text-zoom-break-word">我们的口号是：<br/>“中国球工作室，为人民服务”</h1>
+		<h1>欢迎来到中国球工作室官网！</h1>
+		<h1>请记住，工作室的生日是：10月22日！</h1>
+		<h1>这是个规模超大的工作室！（快了）</h1>
+		<h1>我们的口号是：<br/>“中国球工作室，为人民服务”</h1>
     </h1>
 	<br/>
 	<h1>让我猜猜你用的是什么系统？</h1>
@@ -41,14 +40,14 @@
 	<div><h1><a href="#3" class="button red">工作室历史</a></h1></div>
 	<br/>
     <h1>
-        <div class="typography-site-headline-standalone hero-headline-copy text-zoom-break-word"><a href="https://code.xueersi.com/space/43137378">室长的主页</a></div>
+        <div><a href="https://code.xueersi.com/space/43137378">室长的主页</a></div>
     </h1>
 	<div>
 		<a href="https://zhpolandball.miraheze.org/wiki/%E4%B8%AD%E5%8D%8E%E4%BA%BA%E6%B0%91%E5%85%B1%E5%92%8C%E5%9B%BD%E7%90%83"><img src="https://static.miraheze.org/zhpolandballwiki/thumb/c/c9/PolandballWelcomeToTheWiki.png/320px-PolandballWelcomeToTheWiki.png" title="欢迎！"/></a>
 	</div>
 	<h1 id="studio">
 		<h1 id="1">
-			<h1 class="typography-site-headline-standalone hero-headline-copy text-zoom-break-word">
+			<h1>
 				工作室成员名单（记录一下进入工作室的成员）：
 			</h1>
 			<h1>
@@ -56,7 +55,7 @@
 				<br/>
 				<div><a href="https://code.xueersi.com/space/45472405">杨祖溪(室长协作者)</a></div>
 				<br/>
-				<div><a href="https://code.xueersi.com/space/67688386"">陈星辰(副室长)</a></div>
+				<div><a href="https://code.xueersi.com/space/67688386">陈星辰(副室长)</a></div>
 				<br/>
 				<div><a href="https://code.xueersi.com/space/9891995">蔡知辰</a></div>
 				<br/>
@@ -68,7 +67,7 @@
 			</h1>
 		</h1>
 		<h1 id="2">
-			<h1 class="typography-site-headline-standalone hero-headline-copy text-zoom-break-word">
+			<h1>
 				合作工作室（让我看看有没有不合作的工作室）：
 			</h1>
 			<h1>
@@ -82,7 +81,7 @@
 			</h1>
 		</h1>
 		<h1 id="3">
-			<h1 class="typography-site-headline-standalone hero-headline-copy text-zoom-break-word">
+			<h1>
 				工作室历史（看看工作室的点点滴滴）：
 			</h1>
 			<p>
