--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="cmn-hans">
 <head>
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -47,7 +47,6 @@
 	</div>
 	<h1 id="studio">
 		<h1 id="1">
-			<h1>
 				工作室成员名单（记录一下进入工作室的成员）：
 			</h1>
 			<h1>
@@ -67,7 +66,6 @@
 			</h1>
 		</h1>
 		<h1 id="2">
-			<h1>
 				合作工作室（让我看看有没有不合作的工作室）：
 			</h1>
 			<h1>
@@ -81,7 +79,6 @@
 			</h1>
 		</h1>
 		<h1 id="3">
-			<h1>
 				工作室历史（看看工作室的点点滴滴）：
 			</h1>
 			<p>
